<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GpsOid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="speed">Speed</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="avgspeed">Average speed</string>
    <string name="height">Height</string>
    <string name="gpstime">Gps Time</string>


</resources>
